fix(scroll): failed to scroll on mobile

--- a/src/app/modules/stories/components/stories/stories.component.scss
+++ b/src/app/modules/stories/components/stories/stories.component.scss
@@ -1,6 +1,6 @@
 
 .hsk {
-
+    touch-action: pan-y !important;
     margin: 15px;
     font-size: 1.4em;
     display: flex;
